Added telegram groups (chats) and integration to write to them

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,6 +11,7 @@
 # if you're sharing your code publicly.
 default: &default
   telegram_bot_api_token: <%= ENV['TELEGRAM_BOT_API_TOKEN'] %>
+  telegram_bot_name: <%= ENV['TELEGRAM_BOT_NAME'] %>
 
 development:
   <<: *default
