--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,10 @@ rerun.txt
 pickle-email-*.html
 
 # dotenv
-# TODO Comment out this rule if environment variables can be committed
 .env
+.env.development
+.env.production
+
 
 ## Environment normalization:
 /.bundle
