--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -12,6 +12,7 @@
 default: &default
   telegram_bot_api_token: <%= ENV['TELEGRAM_BOT_API_TOKEN'] %>
   telegram_bot_name: <%= ENV['TELEGRAM_BOT_NAME'] %>
+  mailer_sender: 'test@example.com'
 
 development:
   <<: *default
@@ -26,4 +27,11 @@ test:
 production:
   <<: *default
   secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
-  postmark_api_token: <%= ENV['POSTMARK_API_TOKEN'] %>
+  mailer_sender: <%= ENV['MAILER_SENDER'] %>
+  smtp_settings:
+    :address: <%= ENV['SMTP_ADDRESS'] %>
+    :port: <%= ENV['SMTP_PORT'] %>
+    :domain: <%= ENV['SMTP_DOMAIN'] %>
+    :authentication: :plain
+    :user_name: <%= ENV['SMTP_USERNAME'] %>
+    :password: <%= ENV['SMTP_PASSWORD'] %>
