Added fb, vk, google authentication; added old version of devise password checking

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -13,6 +13,7 @@ default: &default
   telegram_bot_api_token: <%= ENV['TELEGRAM_BOT_API_TOKEN'] %>
   telegram_bot_name: <%= ENV['TELEGRAM_BOT_NAME'] %>
   mailer_sender: 'test@example.com'
+  old_site_pepper: <%= ENV['OLD_SITE_PEPER'] %>
 
 development:
   <<: *default
