--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@rails/webpacker": "^3.2.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "7.x",
@@ -7,12 +8,15 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "bootstrap": "3.3.7",
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.7",
+    "coffeescript": "1.12.7",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "font-awesome": "^4.7.0",
     "glob": "^7.1.2",
     "jquery": "^3.2.1",
     "jquery-ujs": "^1.2.2",
@@ -23,18 +27,19 @@
     "postcss-smart-import": "^0.7.5",
     "precss": "^2.0.0",
     "rails-erb-loader": "^5.1.0",
-    "resolve-url-loader": "^2.1.0",
+    "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "vue": "^2.4.2",
-    "vue-loader": "^13.0.2",
+    "turbolinks": "^5.1.1",
+    "vue": "^2.5.13",
+    "vue-loader": "^13.7.0",
     "vue-select": "^2.2.0",
-    "vue-template-compiler": "^2.4.2",
+    "vue-template-compiler": "^2.5.13",
     "webpack": "^3.4.1",
     "webpack-manifest-plugin": "^1.2.1",
     "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.6.1"
+    "webpack-dev-server": "^2.11.0"
   }
 }
