--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "8.15.0"
+  },
   "dependencies": {
     "@rails/webpacker": "^3.2.0",
     "autoprefixer": "^7.1.2",
