--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node": "8.15.0"
+    "node": "8.17.0"
   },
   "dependencies": {
     "@rails/webpacker": "^3.2.0",
@@ -46,5 +46,6 @@
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.0"
-  }
+  },
+  "version": "1.22.10"
 }
