--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coffeescript": "1.12.7",
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.4",
+    "elliptic": "^6.5.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
@@ -24,6 +25,9 @@
     "jquery": "^3.2.1",
     "jquery-ujs": "^1.2.2",
     "js-yaml": "^3.9.1",
+    "lodash": "^4.17.21",
+    "macaddress": "^0.2.9",
+    "mixin-deep": "^1.3.2",
     "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.6",
@@ -34,6 +38,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "turbolinks": "^5.1.1",
+    "url-parse": "^1.5.0",
     "vue": "^2.5.13",
     "vue-loader": "^13.7.0",
     "vue-select": "^2.2.0",
@@ -42,10 +47,11 @@
     "vuejs-auto-complete": "^0.7.0",
     "webpack": "^3.4.1",
     "webpack-manifest-plugin": "^1.2.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "y18n": "^3.2.2"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.0"
+    "webpack-dev-server": "3.1.11"
   },
   "version": "1.22.10"
 }
