--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "engines": {
-    "node": "8.17.0"
+    "node": "12.22.1"
   },
   "dependencies": {
-    "@rails/webpacker": "^3.2.0",
+    "@rails/webpacker": "3.5.5",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "7.x",
@@ -28,7 +28,6 @@
     "lodash": "^4.17.21",
     "macaddress": "^0.2.9",
     "mixin-deep": "^1.3.2",
-    "node-sass": "^4.5.3",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.6",
     "postcss-smart-import": "^0.7.5",
