--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
-    "bootstrap": "3.3.7",
+    "bootstrap": "3.4.1",
     "coffee-loader": "^0.7.3",
     "coffee-script": "^1.12.7",
     "coffeescript": "1.12.7",
@@ -22,11 +22,8 @@
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
     "glob": "^7.1.2",
-    "jquery": "^3.2.1",
+    "jquery": "^3.5.0",
     "jquery-ujs": "^1.2.2",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.21",
-    "macaddress": "^0.2.9",
     "mixin-deep": "^1.3.2",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.6",
@@ -51,6 +48,20 @@
   },
   "devDependencies": {
     "webpack-dev-server": "3.1.11"
+  },
+  "resolutions": {
+    "selfsigned": "^1.10.8",
+    "serialize-javascript": "^3.1.0",
+    "ssri": "^6.0.2",
+    "http-proxy": "^1.18.1",
+    "cssnano": "^4.1.10",
+    "macaddress": "^0.2.9",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.21",
+    "object-path": "^0.11.5",
+    "set-value": "^2.0.1",
+    "jquery": "^3.5.0",
+    "websocket-extensions": "^0.1.4"
   },
   "version": "1.22.10"
 }
